# .maestro/US-2.2-test.yml
appId: com.anonymous.campusguide
---
- launchApp

# Wait for app to load
- extendedWaitUntil:
    visible: "Concordia Campus Guide"
    timeout: 60000

# Navigate to Directions page
- extendedWaitUntil:
    visible: "Concordia Campus Guide"
    timeout: 60000

- tapOn: "Directions"
- waitForAnimationToEnd

# Assert Directions page elements
- assertVisible: "Get Directions"
# - assertVisible: "Start location"
# - assertVisible: "Destination"

# Tap on use current location button
- tapOn:
    id: "use-current-location-button"

# Confirm/close keyboard or selection (if needed)
# - hideKeyboard

# Tap on Destination field
- tapOn:
    id: "dest-input"

- assertVisible:
    id: "dest-input"
    focused: true

# Enter destination
- inputText: "BH"
- tapOn:
    point: "50%, 30%" 


# Confirm/close keyboard
# - hideKeyboard

# Assert both fields are filled
- assertVisible: "BB-BH Annex"

# Select transport mode test
- tapOn: "Car"
- tapOn: "Transit"
- tapOn: "Walk"

- stopApp